[metadata]
name = MIMIC
version = 9999
description = Multimodal implementation of a VAE for the MIMIC-CXR Database
url = https://github.com/Jimmy2027/joint_elbo
keywords =
    MMVAE
    data analysis
    deep learning
classifiers =
provides = mimic

[options]
install_requires =
packages = find:
include_package_data = True

[options.extras_require]
test =
    pytest~=6.1