[metadata]
name = MIMIC
version = 9999
description = Multimodal implementation of a VAE for the MIMIC-CXR Database
url = https://github.com/Jimmy2027/joint_elbo
keywords =
    MMVAE
    data analysis
    deep learning
classifiers =
provides = mimic

[options]
install_requires=[
'numpy~ = 1.19.1',
'pandas~ = 1.1.3',
'torch~ = 1.6.0',
'scikit-learn~ = 0.23.2',
'Pillow~ = 8.0.0',
'torchvision~ = 0.7.0',
'nltk~ = 3.5',
'tqdm~ = 4.50.2',
'scipy~ = 1.5.2',
'matplotlib~ = 3.3.1',
'setuptools~ = 50.3.0.post20201006'
]
packages = find:
include_package_data = True

[options.extras_require]
test =
    pytest~=6.1